--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 
 body {
   background-color: var(--body-color);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 html {
